DTGB-433: Added fix for iconlist items on mobile.

--- a/components/21-atoms/list/_list.scss
+++ b/components/21-atoms/list/_list.scss
@@ -59,9 +59,11 @@ ul {
     list-style-type: none;
 
     li {
-      display: flex;
+      @include mobile {
+        display: flex;
+        align-items: center;
+      }
       position: relative;
-      align-items: center;
       margin-bottom: .4rem;
       padding-left: 0;
       line-height: 1.6;
